tests/fixtures/fail/generic_extend_generic_member.sali
let Cell(T: type) = struct(value: T)

extend(T: type) Cell(T) {
  let invalid(U: type)(borrow self)(move value: U): U = value
}

let main(): i32 = 0
